cluster/apps/owntracks/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: owntracks
  labels:
    managed-by: flux
