cluster/apps/owntracks/owntracks-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: owntracks-frontend
  namespace: owntracks
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: owntracks-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-frontend
  namespace: owntracks
  labels:
    app.kubernetes.io/instance: owntracks-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: owntracks-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: owntracks-frontend
    spec:
      restartPolicy: Always
      containers:
        - name: owntracks-frontend
          image: owntracks/frontend:2.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: owntracks-frontend
  namespace: owntracks
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`owntracks.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: forwardauth-authelia
          namespace: networking
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: owntracks-frontend
          namespace: owntracks
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
