cluster/apps/owntracks/owntracks-recorder.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: owntracks
  namespace: owntracks
spec:
  ports:
    - name: http
      port: 8083
      targetPort: http
  selector:
    app.kubernetes.io/instance: owntracks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks
  namespace: owntracks
  labels:
    app.kubernetes.io/instance: owntracks
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: owntracks
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: owntracks
    spec:
      restartPolicy: Always
      containers:
        - name: owntracks
          image: owntracks/recorder:0.9.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          volumeMounts:
            - mountPath: /certs
              name: owntracks-certs
            - mountPath: /store
              name: owntracks-data
      volumes:
        - name: owntracks-certs
          configMap:
            name: owntracks
        - name: owntracks-data
          persistentVolumeClaim:
            claimName: owntracks-data-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: owntracks
  namespace: owntracks
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`owntracks.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: forwardbasicauth-authelia
          namespace: networking
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: owntracks
          namespace: owntracks
          port: 8083
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
